--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,18 @@
     <!-- https://www.w3schools.com/html/html_head.asp
     https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML -->
     <meta name="author" content="Xingzhe Li">
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
+    <base href="/">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro">
+    <!-- https://highlightjs.org/usage/ -->
+    <!-- https://github.com/highlightjs/highlight.js/blob/master/LICENSE -->
+    <link rel="stylesheet" href="/highlight/styles/default.css">
+    <!-- Atom One Light by Daniel Gamage
+    Original One Light Syntax theme from https://github.com/atom/one-light-syntax -->
+    <link rel="stylesheet" href="/highlight/styles/atom-one-light.css">
+    <script src="/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <div id="App"></div>
