--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro">
     <!-- https://highlightjs.org/usage/ -->
     <!-- https://github.com/highlightjs/highlight.js/blob/master/LICENSE -->
-    <link rel="stylesheet" href="/highlight/styles/default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/default.css">
     <!-- Atom One Light by Daniel Gamage
     Original One Light Syntax theme from https://github.com/atom/one-light-syntax -->
-    <link rel="stylesheet" href="/highlight/styles/atom-one-light.css">
-    <script src="/highlight/highlight.pack.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/atom-one-light.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
